[gd_scene load_steps=7 format=3 uid="uid://cshqms135wpu5"]

[ext_resource type="Script" path="res://src/main/weapons/base_weapon.gd" id="1_236r2"]
[ext_resource type="Texture2D" uid="uid://d1fr8egqi0880" path="res://assets/lights/circular_1.png" id="2_74asv"]

[sub_resource type="Animation" id="Animation_7ajaw"]
length = 0.001
step = 0.05

[sub_resource type="Animation" id="Animation_gx3gl"]
resource_name = "muzzle_flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MuzzleFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4dalj"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfqp1"]
_data = {
"RESET": SubResource("Animation_7ajaw"),
"muzzle_flash": SubResource("Animation_gx3gl"),
"reload": SubResource("Animation_4dalj")
}

[node name="BaseWeapon" type="Node2D"]
z_index = 6
script = ExtResource("1_236r2")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="EndOfGun" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="PointLight2D" type="PointLight2D" parent="EndOfGun"]
texture = ExtResource("2_74asv")

[node name="AttackCooldown" type="Timer" parent="."]
unique_name_in_owner = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.7, 0.7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_yfqp1")
}

[node name="GunFireSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true

[node name="OutOfAmmoSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
